--- a/london/README
+++ b/london/README
@@ -2,6 +2,7 @@ Please refer work_flow.pdf first
 
 *********prep.ipynb***********
 *********prep2.ipynb**********
+*********data_exploration*****
 *********NN_model.ipynb*******
 *********TrainModel.ipynb*******
 
