--- a/london/README
+++ b/london/README
@@ -5,7 +5,7 @@ Please refer work_flow.pdf first
 *********data_exploration*****
 *********NN_model.ipynb*******
 *********TrainModel.ipynb*******
-
+ Note: Please Ignore prep3.ipynb
 
 
 are main files
